Separation of files

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,8 +4,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us</title>
+  <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
-  <h1>This is the about us page</h1>
+  <header>
+    <img src="./HTML/pictures/the_o'david.jpg" height="250">
+    <h1>CAC OKE ALAFIA LOYOLA Secondary School</h1>
+    <nav>
+        <a href="/">Home</a>
+        <a href="./about.html">About Us</a>
+        <a href="./academics.html">Academics</a>
+        <a href="./admissions.html">Admission</a>
+        <a href="./students.html">Student Life</a>
+        <a href="./events.html">Events</a>
+        <a href="./contact.html">Contact Us</a>
+        <a href="./gallery.html">Gallery</a>
+        <a href="./news.html">News/Blog</a>
+    </nav>
+</header>
+
+  <section id="about" class="container">
+    <h2>About Us</h2>
+
+    <p>Welcome to CAC OKE ALAFIA LOYOLA Secondary School, a place where education meets excellence. We take pride in providing a nurturing environment that fosters intellectual and personal growth for our students.</p>
+
+    <p>Founded with a vision to empower the youth with knowledge and values, our school has been a beacon of education in the community for several years. Our dedicated faculty and staff are committed to shaping the minds of the future leaders, instilling in them a passion for learning, and preparing them for the challenges of the modern world.</p>
+
+    <p>Key Features of CAC OKE ALAFIA LOYOLA Secondary School:</p>
+
+    <ul>
+        <li>Highly qualified and experienced teaching staff</li>
+        <li>Modern and well-equipped classrooms</li>
+        <li>Comprehensive curriculum focusing on academic and personal development</li>
+        <li>State-of-the-art facilities, including laboratories, library, and sports amenities</li>
+        <li>Strong emphasis on extracurricular activities for a well-rounded education</li>
+        <li>A supportive and inclusive school community</li>
+    </ul>
+
+    <p>At CAC OKE ALAFIA LOYOLA Secondary School, we believe in nurturing not just students but individuals with a sense of responsibility, respect, and a commitment to making a positive impact on society.</p>
+
+    <p>Come join us on this journey of education and exploration. Together, let's build a future filled with knowledge, character, and success.</p>
+
+    <!-- Add about us content here -->
+</section>
 </body>
 </html>
