--- a/pages/academics.html
+++ b/pages/academics.html
@@ -4,8 +4,66 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Academics</title>
+  <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
+  <header>
+    <img src="./HTML/pictures/the_o'david.jpg" height="250">
+    <h1>CAC OKE ALAFIA LOYOLA Secondary School</h1>
+    <nav>
+        <a href="/">Home</a>
+        <a href="./about.html">About Us</a>
+        <a href="./academics.html">Academics</a>
+        <a href="./admissions.html">Admission</a>
+        <a href="./students.html">Student Life</a>
+        <a href="./events.html">Events</a>
+        <a href="./contact.html">Contact Us</a>
+        <a href="./gallery.html">Gallery</a>
+        <a href="./news.html">News/Blog</a>
+    </nav>
+</header>
+
   <h1>Academics</h1>
+
+  <section id="academics">
+    <h2>Academics</h2>
+
+    <p>At CAC OKE ALAFIA LOYOLA Secondary School, we are dedicated to providing a comprehensive and enriching academic experience that prepares students for success in higher education and beyond. Our academic programs are designed to foster intellectual curiosity, critical thinking, and a lifelong love for learning.</p>
+
+    <h3>Curriculum</h3>
+    <p>Our curriculum is carefully crafted to meet national educational standards while promoting a holistic approach to education. Students engage in a diverse range of subjects, including:</p>
+
+    <ul>
+        <li>Mathematics</li>
+        <li>Science</li>
+        <li>English Language and Literature</li>
+        <li>Social Studies</li>
+        <li>Foreign Languages</li>
+        <li>Physical Education</li>
+        <li>Arts and Humanities</li>
+        <li>Computer Science</li>
+    </ul>
+
+    <p>Our experienced and qualified faculty members are committed to providing engaging and challenging lessons that cater to the individual needs and learning styles of our students.</p>
+
+    <h3>Extracurricular Activities</h3>
+    <p>In addition to our rigorous academic curriculum, we offer a variety of extracurricular activities to enrich the overall educational experience. These may include:</p>
+
+    <ul>
+        <li>Sports and Athletics</li>
+        <li>Clubs and Organizations</li>
+        <li>Debates and Public Speaking</li>
+        <li>Cultural and Artistic Events</li>
+        <li>Community Service Initiatives</li>
+    </ul>
+
+    <p>We believe that a well-rounded education includes not only academic excellence but also the development of leadership skills, teamwork, and creativity through participation in extracurricular activities.</p>
+
+    <h3>Advanced Placement (AP) Programs</h3>
+    <p>For academically advanced students, we offer Advanced Placement (AP) courses to provide a more challenging and in-depth study of specific subjects. This allows students to earn college credit and excel in their chosen fields of study.</p>
+
+    <p>At CAC OKE ALAFIA LOYOLA Secondary School, we are committed to creating a learning environment that inspires curiosity, fosters academic achievement, and prepares students for a successful future.</p>    
+    <!-- Add academics content here -->
+</section>
 </body>
 </html>
