--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -4,8 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gallery</title>
+  <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
+  <header>
+    <img src="./HTML/pictures/the_o'david.jpg" height="250">
+    <h1>CAC OKE ALAFIA LOYOLA Secondary School</h1>
+    <nav>
+        <a href="/">Home</a>
+        <a href="./about.html">About Us</a>
+        <a href="./academics.html">Academics</a>
+        <a href="./admissions.html">Admission</a>
+        <a href="./students.html">Student Life</a>
+        <a href="./events.html">Events</a>
+        <a href="./contact.html">Contact Us</a>
+        <a href="./gallery.html">Gallery</a>
+        <a href="./news.html">News/Blog</a>
+    </nav>
+</header>
+
   <h1>This is Gallery</h1>
 </body>
 </html>
