Yet, another separation of pages

--- a/pages/admissions.html
+++ b/pages/admissions.html
@@ -23,6 +23,10 @@
     </nav>
 </header>
 
-  <h1>Admisions here</h1>
+  
+<section id="admission">
+  <h2>Admission</h2>
+  <!-- Add admission content here -->
+</section>
 </body>
 </html>
