--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,6 +23,9 @@
     </nav>
 </header>
 
-  <h1>Contact us here</h1>
+<section id="contact">
+  <h2>Contact Us</h2>
+  <!-- Add contact us content here -->
+</section>
 </body>
 </html>
