--- a/pages/events.html
+++ b/pages/events.html
@@ -23,6 +23,9 @@
     </nav>
 </header>
 
-  <h1>Events Page</h1>
+<section id="events">
+  <h2>Events</h2>
+  <!-- Add events content here -->
+</section>
 </body>
 </html>
