--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -23,6 +23,8 @@
     </nav>
 </header>
 
-  <h1>This is Gallery</h1>
-</body>
+<section id="gallery">
+  <h2>Gallery</h2>
+  <!-- Add gallery content here -->
+</section>
 </html>
