--- a/pages/news.html
+++ b/pages/news.html
@@ -23,6 +23,10 @@
     </nav>
 </header>
 
-  <h1>This is news</h1>
+<section id="news">
+  <h2>News/Blog</h2>
+  <!-- Add news/blog content here -->
+</section>
+
 </body>
 </html>
