--- a/pages/students.html
+++ b/pages/students.html
@@ -23,6 +23,9 @@
     </nav>
 </header>
 
-  <h1>Student Portal</h1>
+<section id="student-life">
+  <h2>Student Life</h2>
+  <!-- Add student life content here -->
+</section>
 </body>
 </html>
